<resources>
    <string name="app_name">MovieRecorder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="rate_it">Rate it!</string>
    <string name="example_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="movie_language">Lang: %1$s</string>
    <string name="reviews">Score: %1$s (%2$d  reviews)</string>
    <string name="movie_popularity">Views: %1$s </string>
    <string name="search">search</string>
    <string name="search_bar_title">Search</string>
    <string name="page_indicator">Showing page: %1$s</string>
    <string name="next_page_indicator">Swipe Down to change to page: %1$s</string>
    <string name="last_page">Last page</string>
    <string name="home_menu">Home</string>
    <string name="watchedFilms_menu">Watched</string>
    <string name="favorites_menu">Favorites</string>
    <string name="btn_trailer_text">Trailer</string>
    <string name="next_page_btn">Next page</string>
    <string name="back_page_btn">Back page</string>
    <string name="page_number">1</string>
    <string name="home_query_hint">Search in global DB…</string>
    <string name="favorite_query_hint">Search in this list…</string>
    <string name="example_chip_text">Popular</string>
    <string name="top_rated_chip_text">Top rated</string>
    <string name="upcoming_chip_text">Upcoming</string>
    <string name="latest_chip_text">Playing</string>
    <string name="watch_later_text_bottom_bar">Watch Later</string>
    <string name="viewed_text">Viewed?</string>
    <string name="logo_from_splash">Logo from splash</string>
    <string name="btn_share_content_description">Button to share movie</string>
</resources>