<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_min_padding_margin"
        app:singleSelection="true"
        app:checkedChip="@id/popular_chip"
        app:selectionRequired="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/popular_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chip_text_dimen"
            android:checkable="true"
            android:text="@string/example_chip_text"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/top_rated_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chip_text_dimen"
            android:checkable="true"
            android:text="@string/top_rated_chip_text"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/upcoming_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chip_text_dimen"
            android:checkable="true"
            android:text="@string/upcoming_chip_text"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/playing_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chip_text_dimen"
            android:checkable="true"
            android:text="@string/latest_chip_text"/>


    </com.google.android.material.chip.ChipGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/recyclerview_anim"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:spanCount="3"
        tools:listitem="@layout/movie_item" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_message_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty" />

</androidx.constraintlayout.widget.ConstraintLayout>