<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />
        </RelativeLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_padding_margin"
        android:clipToPadding="true"
        app:cardCornerRadius="@dimen/common_min_padding_margin"
        app:cardElevation="@dimen/common_padding_margin"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_3"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_1">

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        style="@style/textTitles"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/imgBackground"
        tools:text="The lord of the rings: The two towers" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        style="@style/textDescriptionAndGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_3"
        tools:text="Comedy, Action, Adventure, Science Fiction" />


    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        style="@style/textInBackground"
        app:drawableStartCompat="@drawable/ic_baseline_star"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_1"
        tools:text="7.1(4123 Reviews)" />

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        style="@style/textInBackground"
        app:drawableStartCompat="@drawable/ic_popularity"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_4"
        tools:text="5644654 views" />

    <TextView
        android:id="@+id/tv_calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        style="@style/textInBackground"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_5"
        tools:text="12-08-2021" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rate_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_padding_margin"
        android:layout_marginBottom="@dimen/common_padding_margin"
        android:text="@string/rate_it"
        android:textAlignment="viewStart"
        app:cornerRadius="@dimen/max_common_value"
        app:icon="@drawable/ic_baseline_star"
        app:iconGravity="end"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_6"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_3" />

    <ImageView
        android:id="@+id/cv_favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        android:src="@drawable/ic_baseline_favorite_border"
        app:layout_constraintBottom_toBottomOf="@id/btn_rate_movie"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="@id/btn_rate_movie" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_min_padding_margin"
        android:gravity="center_horizontal"
        app:autoSizeTextType="uniform"
        app:drawableStartCompat="@drawable/ic_baseline_language"
        app:layout_constraintBottom_toBottomOf="@id/btn_rate_movie"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline_4"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="@id/btn_rate_movie"
        tools:text="en-US" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_min_padding_margin"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/common_min_padding_margin"
        android:src="@drawable/ic_baseline_share"
        app:layout_constraintBottom_toBottomOf="@id/btn_rate_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_4"
        app:layout_constraintTop_toTopOf="@id/btn_rate_movie" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_margin"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"

        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_6" />


        <TextView
            android:id="@+id/tv_description_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/common_padding_margin"
            android:layout_marginStart="@dimen/common_padding_margin"
            android:layout_marginEnd="@dimen/common_padding_margin"
            android:layout_marginBottom="@dimen/common_padding_margin"
            style="@style/textDescriptionAndGenre"
            tools:text="@string/example_description"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"/>


        <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tv_genre" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tv_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
